--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,10 +8,9 @@
   </div>
 {% endif %}
 
-<form action="{% url 'login' %}" method="post">
+<form action="{% url 'login_view' %}" method="post">
   {% csrf_token %}
-  <input name="username" type="text" placeholder="username"/>
-  <input name="password" type="password" placeholder="password"/>
+  {{ form }}
   <input type="submit" value="Login"/>
 </form>
 
