Add link to static javascript files in budget view

--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -1,5 +1,8 @@
 {% extends "budget/layout.html" %}
 
+{% block title %} Budget {% endblock %}
+
 {% block content %}
-<h1>Hello world!</h1>
+<h1>Your budget</h1>
+
 {% endblock %}
