--- a/budget/templates/budget/layout.html
+++ b/budget/templates/budget/layout.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 <title>{% block title %} {% endblock %}</title>
+<script src="{% static 'budget/budget.js' %}"></script>
 </head>
 
 <body>
